# uebung8

./: CMakeLists.txt  aufgabe1.c  aufgabe2.c  aufgabe3.c
